@@ -2,6 +2,7 @@ package cloud.huazai.tool.java.util;
 
 import cloud.huazai.tool.java.lang.StringUtils;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -17,7 +18,7 @@ public class MapUtils {
     private static final String defaultMessage = "Collection Is Empty";
 
     public static Map<?,?> immutableEmptyMap() {
-        return Map.of();
+        return Collections.emptyMap();
     }
 
     public static Map<?,?> emptyMap() {
